# C-Final-Project

./: CMakeLists.txt  README.md  main.cpp
data/: community-greenhouse-gas.csv  local-government-operations-fuels.csv  local-government-operations-greenhouse-gas.csv
lib/include/: Analysis.h  data_processor.h  visualization.h
lib/src/: Analysis.cpp  data_processor.cpp  visualization.cpp
